--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "@prettier/plugin-php": "0.22.2",
+    "axios": "^1.6.4",
+    "laravel-vite-plugin": "^1.0",
+    "prettier": "3.2.5",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.0"
+  }
 }
