--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
   "require": {
     "php": "^8.2",
     "laravel/framework": "^11.0",
-    "laravel/tinker": "^2.9"
+    "laravel/tinker": "^2.9",
+    "symfony/http-client": "^7.0",
+    "symfony/postmark-mailer": "^7.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.23",
