change prod app url to custom domain

--- a/fly.toml
+++ b/fly.toml
@@ -18,8 +18,8 @@ console_command = 'php /var/www/html/artisan tinker'
 [env]
   APP_NAME = 'Vocablog'
   APP_ENV = 'production'
-  APP_URL = 'https://vocablog.fly.dev'
-  ASSET_URL = 'https://vocablog.fly.dev'
+  APP_URL = 'https://vocablog.mubaraqwahab.com'
+  ASSET_URL = 'https://vocablog.mubaraqwahab.com'
   LOG_CHANNEL = 'stderr'
   LOG_LEVEL = 'info'
   LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
