add a cron process group

--- a/fly.toml
+++ b/fly.toml
@@ -38,6 +38,7 @@ console_command = 'php /var/www/html/artisan tinker'
 
 [processes]
   app = ''
+  cron = 'cron -f'
   worker = 'php artisan queue:listen'
 
 [[vm]]
@@ -50,5 +51,5 @@ console_command = 'php /var/www/html/artisan tinker'
   memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
-  processes = ['worker']
+  processes = ['cron', 'worker']
 
