--- a/fly.toml
+++ b/fly.toml
@@ -12,8 +12,8 @@ console_command = 'php /var/www/html/artisan tinker'
     NODE_VERSION = '18'
     PHP_VERSION = '8.3'
 
-# [deploy]
-#   release_command = "php /var/www/html/artisan migrate --force"
+[deploy]
+  release_command = "php /var/www/html/artisan migrate --force"
 
 [env]
   APP_NAME = 'Vocablog'
