increase printwidth of php files

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "plugins": ["@prettier/plugin-php"]
+  "plugins": ["@prettier/plugin-php"],
+  "overrides": [
+    {
+      "files": ["*.php"],
+      "options": {
+        "printWidth": 90
+      }
+    }
+  ]
 }
