--- a/fly.toml
+++ b/fly.toml
@@ -38,9 +38,9 @@ console_command = 'php /var/www/html/artisan tinker'
 
 [processes]
   app = ''
+  cron = 'cron -f'
 
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  processes = ['app']
