--- a/fly.toml
+++ b/fly.toml
@@ -20,12 +20,9 @@ console_command = 'php /var/www/html/artisan tinker'
   APP_ENV = 'production'
   APP_URL = 'https://vocablog.mubaraqwahab.com'
   ASSET_URL = 'https://vocablog.mubaraqwahab.com'
-  # LOG_CHANNEL = 'stderr'
-  # LOG_LEVEL = 'info'
-  # LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
-  LOG_CHANNEL = 'stack'
-  LOG_STACK = 'single'
-  LOG_LEVEL = 'debug'
+  LOG_CHANNEL = 'stderr'
+  LOG_LEVEL = 'info'
+  LOG_STDERR_FORMATTER = 'Monolog\Formatter\JsonFormatter'
   DB_CONNECTION = 'pgsql'
   MAIL_MAILER = 'postmark'
   MAIL_FROM_ADDRESS = 'hello@vocablog.mubaraqwahab.com'
