--- a/fly.toml
+++ b/fly.toml
@@ -41,6 +41,6 @@ console_command = 'php /var/www/html/artisan tinker'
   cron = 'cron -f'
 
 [[vm]]
-  memory = '1gb'
+  memory = '512mb'
   cpu_kind = 'shared'
   cpus = 1
