--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "prettier": "3.2.5",
     "tailwindcss": "^3.1.0",
     "vite": "^5.0"
+  },
+  "dependencies": {
+    "@fontsource-variable/work-sans": "^5.2.5",
+    "@github/details-menu-element": "^1.0.13",
+    "lucide": "^0.501.0"
   }
 }
