--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fontsource-variable/work-sans": "^5.2.5",
     "@github/details-menu-element": "^1.0.13",
+    "canvas-confetti": "^1.9.3",
     "lucide": "^0.501.0"
   }
 }
